# Poetry-Learning

./: README.MD  pyproject.toml
docs/: dicas.txt  links.md
